<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/white"
    android:background="@drawable/bottom_sheet_background"
    tools:context=".Fragments.CarDetailsFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CarDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/soft_blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infosDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toEndOf="@+id/infosCar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Derniere fois"
                android:textAlignment="center"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/infoDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infoTimeHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/dark_grey"
                android:text="@string/map_infos_hour"
                app:layout_constraintBottom_toTopOf="@+id/infoTimeMin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoDate" />

            <TextView
                android:id="@+id/infoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/map_infos_date"
                app:layout_constraintBottom_toTopOf="@+id/infoTimeHour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/infoTimeMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                android:text="@string/map_infos_min"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTimeHour" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infosCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168">

            <TextView
                android:id="@+id/infoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/map_infos_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/infoPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/medium_grey"
                android:text="@string/map_infos_phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/infoName"
                app:layout_constraintTop_toBottomOf="@+id/infoName"
                android:textSize="18sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>