<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.addCar.formFragment1"
    >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            >
            <ImageButton
                android:id="@+id/retour"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                app:tint="@color/dark_grey"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ajouter_une_voiture"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/errors_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="30dp"
            >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numeroInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/numero_de_telephone"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_phone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_container_design"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingHorizontal="20dp"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_marginLeft="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:ccp_showFullName="false"
                app:ccp_showArrow="false"
                app:ccp_showNameCode="false"
                app:ccpDialog_showPhoneCode="false"
                app:ccp_showPhoneCode="false"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errors_layout"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            >

            <TextView
                android:id="@+id/phoneErrors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="40dp"
            >


            <Button
                android:id="@+id/annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@android:color/transparent"
                android:textSize="10sp"
                android:text="@string/annuler"
                android:textColor="@color/violet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/violet"
                app:strokeWidth="1dp"
                style="?attr/materialButtonOutlinedStyle"
                app:cornerRadius="6dp"
                android:fontFamily="@font/montserrat_semibold"
                />


            <Button
                android:id="@+id/suivant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/violet"
                android:text="@string/suivant"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/annuler"
                android:fontFamily="@font/montserrat_semibold"
                app:cornerRadius="6dp"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>